# gaylib

./: LICENSE  README.md
FixedPointNumbers/: CMakeLists.txt  arithmetic.cxx  core.ixx  defs.h  main.cpp  types.ixx
FixedPointNumbers/tests/: CMakeLists.txt  core_rt.cpp  helpers.ixx
FixedPointPrecision/: CMakeLists.txt  arithmetic.h  dummyHelper.cxx  fixed.cxx  main.cpp  support.cxx  test_ari.cpp
FixedPointPrecision/tests/: CMakeLists.txt  helpers.cxx  test_ari.cpp  test_fpn.cpp
